@@ -3,6 +3,8 @@
 *2011-03-10*
  * Fix the symbian build. It needs to be signed. Thats what breaks! Dammit!
  * Lots of debug messages and an attempt at fixing high CPU load.
+ * If the mq server is invalid, don't crash.
+ * Timer delay in deleting the NwCfg object.
 
 *2011-03-08*
  * Lots of improvements for the Symbian build. It runs and actually attempts to connect, but no full login yet. Soon. Soon.
