@@ -1,2 +1,4 @@
-  * Lots of debug messages and an attempt at fixing high CPU load.
+  * QML now starts off with a width,height that matches the platform.
+  * If the mq server is invalid, don't crash.
+  * Timer delay in deleting the NwCfg object.
 
